--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.1",
     "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-mdx-frontmatter": "^5.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
