--- a/package.json
+++ b/package.json
@@ -3,43 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/ibm-plex-sans": "^5.2.5",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.4",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/mdx": "^2.0.13",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "gray-matter": "^4.0.3",
-    "lucide-react": "^0.471.1",
-    "next": "15.1.4",
+    "@radix-ui/themes": "^3.2.1",
+    "next": "16.0.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.0.1",
-    "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-mdx-frontmatter": "^5.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "24.10.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "16.0.7",
     "typescript": "^5"
-  },
-  "packageManager": "yarn@4.6.0"
+  }
 }
