--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "eslint-config-next": "16.0.7",
     "typescript": "^5",
     "wrangler": "^4.53.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
